src/lang/antlr/MocaParser.ts
// Generated from C://dev//node-moca-client//src//lang//antlr//Moca.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import MocaListener from "./MocaListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class MocaParser extends Parser {
	public static readonly DOUBLE_BRACKET_STRING = 1;
	public static readonly SINGLE_BRACKET_STRING = 2;
	public static readonly LEFT_PAREN = 3;
	public static readonly RIGHT_PAREN = 4;
	public static readonly LEFT_BRACE = 5;
	public static readonly RIGHT_BRACE = 6;
	public static readonly LEFT_BRACKET = 7;
	public static readonly RIGHT_BRACKET = 8;
	public static readonly LESS = 9;
	public static readonly GREATER = 10;
	public static readonly LESS_EQUAL = 11;
	public static readonly GREATER_EQUAL = 12;
	public static readonly DOUBLE_LESS = 13;
	public static readonly DOUBLE_GREATER = 14;
	public static readonly PLUS = 15;
	public static readonly MINUS = 16;
	public static readonly STAR = 17;
	public static readonly DIV = 18;
	public static readonly MOD = 19;
	public static readonly BACKSLASH = 20;
	public static readonly AMPERSAND = 21;
	public static readonly CARET = 22;
	public static readonly BANG = 23;
	public static readonly QUESTION = 24;
	public static readonly COLON = 25;
	public static readonly SEMI_COLON = 26;
	public static readonly COMMA = 27;
	public static readonly PIPE = 28;
	public static readonly DOUBLE_PIPE = 29;
	public static readonly POUND = 30;
	public static readonly AT = 31;
	public static readonly EQUAL = 32;
	public static readonly NOT_EQUAL = 33;
	public static readonly DOT = 34;
	public static readonly DOLLAR_SIGN = 35;
	public static readonly OVERSTACKED_ARGS = 36;
	public static readonly SPECIAL_COMMAND_ARG_NO_ROWS = 37;
	public static readonly SPECIAL_COMMAND_ARG_DUMMY_ARG = 38;
	public static readonly SUPPRESS_WARNINGS = 39;
	public static readonly WHERE = 40;
	public static readonly AND = 41;
	public static readonly LIKE = 42;
	public static readonly OR = 43;
	public static readonly IS = 44;
	public static readonly NOT = 45;
	public static readonly NULL = 46;
	public static readonly IF = 47;
	public static readonly ELSE = 48;
	public static readonly TRY = 49;
	public static readonly CATCH = 50;
	public static readonly FINALLY = 51;
	public static readonly REMOTE = 52;
	public static readonly PARALLEL = 53;
	public static readonly INPARALLEL = 54;
	public static readonly ONSTACK = 55;
	public static readonly KEEP = 56;
	public static readonly NUMERIC_LITERAL = 57;
	public static readonly STRING_LITERAL = 58;
	public static readonly WORD = 59;
	public static readonly BLOCK_COMMENT = 60;
	public static readonly WHITESPACE = 61;
	public static readonly NEWLINE = 62;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_moca_script = 0;
	public static readonly RULE_sequence = 1;
	public static readonly RULE_stream = 2;
	public static readonly RULE_group = 3;
	public static readonly RULE_statement = 4;
	public static readonly RULE_block = 5;
	public static readonly RULE_command = 6;
	public static readonly RULE_verb_noun_clause = 7;
	public static readonly RULE_verb_noun_clause_arg = 8;
	public static readonly RULE_verb_noun_clause_arg_expr = 9;
	public static readonly RULE_sub_sequence = 10;
	public static readonly RULE_if_expr = 11;
	public static readonly RULE_if_statement = 12;
	public static readonly RULE_else_if_statement = 13;
	public static readonly RULE_else_statement = 14;
	public static readonly RULE_try_block = 15;
	public static readonly RULE_catch_single_expr = 16;
	public static readonly RULE_catch_multi_expr = 17;
	public static readonly RULE_catch_sequence = 18;
	public static readonly RULE_finally_sequence = 19;
	public static readonly RULE_redirect_expr = 20;
	public static readonly RULE_remote_expr = 21;
	public static readonly RULE_suppress_warnings_expr = 22;
	public static readonly RULE_expr = 23;
	public static readonly RULE_function_expr = 24;
	public static readonly RULE_literal_value = 25;
	public static readonly RULE_at_variable = 26;
	public static readonly RULE_environment_variable = 27;
	public static readonly RULE_at_plus_variable = 28;
	public static readonly RULE_at_star = 29;
	public static readonly RULE_at_question = 30;
	public static readonly RULE_at_bang = 31;
	public static readonly RULE_integration_variable = 32;
	public static readonly RULE_remote_keyword = 33;
	public static readonly RULE_groovy_script = 34;
	public static readonly RULE_sql_script = 35;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, "'('", 
                                                            "')'", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "'<'", 
                                                            "'>'", "'<='", 
                                                            "'>='", "'<<'", 
                                                            "'>>'", "'+'", 
                                                            "'-'", "'*'", 
                                                            "'/'", "'%'", 
                                                            "'\\'", "'&'", 
                                                            "'^'", "'!'", 
                                                            "'?'", "':'", 
                                                            "';'", "','", 
                                                            "'|'", "'||'", 
                                                            "'#'", "'@'", 
                                                            "'='", null, 
                                                            "'.'", "'$'", 
                                                            "'<<OVERSTACKED_ARGS>>'", 
                                                            "'#NO_ROWS'", 
                                                            "'#DUMMY_ARG'", 
                                                            "'@SuppressWarnings'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "DOUBLE_BRACKET_STRING", 
                                                             "SINGLE_BRACKET_STRING", 
                                                             "LEFT_PAREN", 
                                                             "RIGHT_PAREN", 
                                                             "LEFT_BRACE", 
                                                             "RIGHT_BRACE", 
                                                             "LEFT_BRACKET", 
                                                             "RIGHT_BRACKET", 
                                                             "LESS", "GREATER", 
                                                             "LESS_EQUAL", 
                                                             "GREATER_EQUAL", 
                                                             "DOUBLE_LESS", 
                                                             "DOUBLE_GREATER", 
                                                             "PLUS", "MINUS", 
                                                             "STAR", "DIV", 
                                                             "MOD", "BACKSLASH", 
                                                             "AMPERSAND", 
                                                             "CARET", "BANG", 
                                                             "QUESTION", 
                                                             "COLON", "SEMI_COLON", 
                                                             "COMMA", "PIPE", 
                                                             "DOUBLE_PIPE", 
                                                             "POUND", "AT", 
                                                             "EQUAL", "NOT_EQUAL", 
                                                             "DOT", "DOLLAR_SIGN", 
                                                             "OVERSTACKED_ARGS", 
                                                             "SPECIAL_COMMAND_ARG_NO_ROWS", 
                                                             "SPECIAL_COMMAND_ARG_DUMMY_ARG", 
                                                             "SUPPRESS_WARNINGS", 
                                                             "WHERE", "AND", 
                                                             "LIKE", "OR", 
                                                             "IS", "NOT", 
                                                             "NULL", "IF", 
                                                             "ELSE", "TRY", 
                                                             "CATCH", "FINALLY", 
                                                             "REMOTE", "PARALLEL", 
                                                             "INPARALLEL", 
                                                             "ONSTACK", 
                                                             "KEEP", "NUMERIC_LITERAL", 
                                                             "STRING_LITERAL", 
                                                             "WORD", "BLOCK_COMMENT", 
                                                             "WHITESPACE", 
                                                             "NEWLINE" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"moca_script", "sequence", "stream", "group", "statement", "block", "command", 
		"verb_noun_clause", "verb_noun_clause_arg", "verb_noun_clause_arg_expr", 
		"sub_sequence", "if_expr", "if_statement", "else_if_statement", "else_statement", 
		"try_block", "catch_single_expr", "catch_multi_expr", "catch_sequence", 
		"finally_sequence", "redirect_expr", "remote_expr", "suppress_warnings_expr", 
		"expr", "function_expr", "literal_value", "at_variable", "environment_variable", 
		"at_plus_variable", "at_star", "at_question", "at_bang", "integration_variable", 
		"remote_keyword", "groovy_script", "sql_script",
	];
	public get grammarFileName(): string { return "Moca.g4"; }
	public get literalNames(): (string | null)[] { return MocaParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return MocaParser.symbolicNames; }
	public get ruleNames(): string[] { return MocaParser.ruleNames; }
	public get serializedATN(): number[] { return MocaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, MocaParser._ATN, MocaParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public moca_script(): Moca_scriptContext {
		let localctx: Moca_scriptContext = new Moca_scriptContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, MocaParser.RULE_moca_script);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 72;
			this.sequence();
			this.state = 73;
			this.match(MocaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public sequence(): SequenceContext {
		let localctx: SequenceContext = new SequenceContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, MocaParser.RULE_sequence);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 75;
			this.stream();
			this.state = 80;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 76;
					this.match(MocaParser.SEMI_COLON);
					this.state = 77;
					this.stream();
					}
					}
				}
				this.state = 82;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 84;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===26) {
				{
				this.state = 83;
				this.match(MocaParser.SEMI_COLON);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stream(): StreamContext {
		let localctx: StreamContext = new StreamContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, MocaParser.RULE_stream);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			this.group();
			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===28) {
				{
				{
				this.state = 87;
				this.match(MocaParser.PIPE);
				this.state = 88;
				this.group();
				}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public group(): GroupContext {
		let localctx: GroupContext = new GroupContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, MocaParser.RULE_group);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 94;
			this.statement();
			this.state = 99;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===21) {
				{
				{
				this.state = 95;
				this.match(MocaParser.AMPERSAND);
				this.state = 96;
				this.statement();
				}
				}
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, MocaParser.RULE_statement);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 132;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				this.state = 102;
				this.block();
				this.state = 104;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===50) {
					{
					this.state = 103;
					this.catch_multi_expr();
					}
				}

				this.state = 107;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===14) {
					{
					this.state = 106;
					this.redirect_expr();
					}
				}

				}
				break;
			case 2:
				{
				this.state = 109;
				this.if_statement();
				this.state = 113;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 110;
						this.else_if_statement();
						}
						}
					}
					this.state = 115;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
				}
				this.state = 117;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 7, this._ctx) ) {
				case 1:
					{
					this.state = 116;
					this.else_statement();
					}
					break;
				}
				}
				break;
			case 3:
				{
				this.state = 119;
				this.try_block();
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===50) {
					{
					{
					this.state = 120;
					this.catch_sequence();
					}
					}
					this.state = 125;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===51) {
					{
					this.state = 126;
					this.finally_sequence();
					}
				}

				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===14) {
					{
					this.state = 129;
					this.redirect_expr();
					}
				}

				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, MocaParser.RULE_block);
		let _la: number;
		try {
			this.state = 152;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 18, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 140;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
				case 1:
					{
					this.state = 135;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
					case 1:
						{
						this.state = 134;
						this.remote_expr();
						}
						break;
					}
					}
					break;
				case 2:
					{
					this.state = 138;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===39) {
						{
						this.state = 137;
						this.suppress_warnings_expr();
						}
					}

					}
					break;
				}
				this.state = 142;
				this.command();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 149;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 17, this._ctx) ) {
				case 1:
					{
					this.state = 144;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===3 || ((((_la - 52)) & ~0x1F) === 0 && ((1 << (_la - 52)) & 7) !== 0)) {
						{
						this.state = 143;
						this.remote_expr();
						}
					}

					}
					break;
				case 2:
					{
					this.state = 147;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===39) {
						{
						this.state = 146;
						this.suppress_warnings_expr();
						}
					}

					}
					break;
				}
				this.state = 151;
				this.sub_sequence();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public command(): CommandContext {
		let localctx: CommandContext = new CommandContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, MocaParser.RULE_command);
		try {
			this.state = 157;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 154;
				this.groovy_script();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 155;
				this.sql_script();
				}
				break;
			case 22:
			case 41:
			case 42:
			case 43:
			case 44:
			case 45:
			case 46:
			case 47:
			case 48:
			case 49:
			case 50:
			case 51:
			case 52:
			case 53:
			case 54:
			case 55:
			case 56:
			case 59:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 156;
				this.verb_noun_clause();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public verb_noun_clause(): Verb_noun_clauseContext {
		let localctx: Verb_noun_clauseContext = new Verb_noun_clauseContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, MocaParser.RULE_verb_noun_clause);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 160;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===22) {
				{
				this.state = 159;
				this.match(MocaParser.CARET);
				}
			}

			this.state = 163;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 162;
					_la = this._input.LA(1);
					if(!(((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & 327679) !== 0))) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 165;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 21, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			this.state = 176;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===40) {
				{
				this.state = 167;
				this.match(MocaParser.WHERE);
				this.state = 168;
				this.verb_noun_clause_arg();
				this.state = 173;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===41) {
					{
					{
					this.state = 169;
					this.match(MocaParser.AND);
					this.state = 170;
					this.verb_noun_clause_arg();
					}
					}
					this.state = 175;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public verb_noun_clause_arg(): Verb_noun_clause_argContext {
		let localctx: Verb_noun_clause_argContext = new Verb_noun_clause_argContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, MocaParser.RULE_verb_noun_clause_arg);
		let _la: number;
		try {
			this.state = 208;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 36:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 178;
				this.match(MocaParser.OVERSTACKED_ARGS);
				}
				break;
			case 37:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 179;
				this.match(MocaParser.SPECIAL_COMMAND_ARG_NO_ROWS);
				}
				break;
			case 38:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 180;
				this.match(MocaParser.SPECIAL_COMMAND_ARG_DUMMY_ARG);
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 181;
				this.groovy_script();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 182;
				this.match(MocaParser.SINGLE_BRACKET_STRING);
				}
				break;
			case 31:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 185;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 24, this._ctx) ) {
				case 1:
					{
					this.state = 183;
					this.at_star();
					}
					break;
				case 2:
					{
					this.state = 184;
					this.at_plus_variable();
					}
					break;
				}
				}
				break;
			case 59:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 187;
				this.match(MocaParser.WORD);
				this.state = 206;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 44:
					{
					{
					this.state = 188;
					this.match(MocaParser.IS);
					this.state = 190;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===45) {
						{
						this.state = 189;
						this.match(MocaParser.NOT);
						}
					}
